# timeopt

./: CMakeLists.txt  README.md
bindings/python/: CMakeLists.txt  __init__.py  module.cpp
bindings/python/container/: array.hpp  visitor.hpp
bindings/python/timeopt/: enum.cpp  enum.hpp  expose-phase.hpp  expose-problem.hpp  phase.cpp  phase.hpp  problem.cpp  problem.hpp
config/: cfg_momSc_demo01.yaml  cfg_momTr_demo01.yaml  cfg_timeopt_demo01.yaml
include/serialization/: archive.hpp  eigen-matrix.hpp  fwd.hpp  spatial.hpp  xml.hpp
include/timeopt/: fwd.hpp  phase.hpp  problem.hpp
include/timeopt/interface/: contactplanner.hpp
script/: biding_test.py  locomote_test.py
src/: CMakeLists.txt
src/timeopt/: phase.cpp  problem.cpp
src/timeopt/interface/: contactplanner.cpp
unittest/: CMakeLists.txt  contactplanner.cc  problem.cc  timeoptimization.cc
